--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
         body {
             margin: 0;
             font-family: 'Merriweather', serif;
+            background-color: #f9fcf0;
         }
 
-        #container {
+        #container{
             display: flex;
-            flex-direction: row;
-            height: 900px;
         }
 
         #sankey-container {
-            flex: 0 0 100%;
-            padding: 20px;
-            box-sizing: border-box;
+            margin-top: 10px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
         }
 
         #sankey {
-            width: 100%;
-            height: 100%;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .node rect {
@@ -89,13 +90,55 @@
             font-style: normal;
             font-weight: 700;
         }
+
+        .column-title {
+            font-size: 14px;
+            font-weight: bold;
+            fill: #333;
+            text-anchor: middle;
+        }
+
+        .info-icon {
+            cursor: help;
+            font-size: 12px;
+            fill: #666;
+        }
+
+        .info-tooltip {
+            position: absolute;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 6px 12px;
+            border-radius: 4px;
+            font-size: 12px;
+            pointer-events: none;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+
+        .info-tooltip.show {
+            opacity: 1;
+        }
+
+        .link, .node rect {
+            transition: all 0.2s ease;
+        }
+
+        #main-title {
+            text-align: center;
+            font-size: 24px;
+            color: #2a7a3b;
+            margin: 20px 0;
+            font-weight: 700;
+        }
     </style>
 </head>
 
 <body>
+    <h1 id="main-title">Let's learn about palm tree species!</h1>
     <div id="container">
         <div id="sankey-container">
-            <svg id="sankey" width="900" height="450"></svg>
+            <svg id="sankey" width="900" height="400"></svg>
         </div>
     </div>
 
@@ -113,6 +156,13 @@
             .nodePadding(20)
             .extent([[1, 1], [width - 1, height - 6]]);
         const color = d3.scaleOrdinal(d3.schemeSet3);
+        const columnInfo = {
+            'palm_subfamily': 'Botanical subfamily classification of palm trees',
+            'climbing': 'Presence of climbing growth habit',
+            'erect': 'Whether the palm grows upright',
+            'stem_armed': 'Presence of defensive structures on stem',
+            'stem_solitary': 'Growth pattern (single or clustered stems)'
+        };
 
         let fullData = [];
         let nodeTimeout, linkTimeout;
@@ -170,18 +220,18 @@
             sankeyLayout(sankeyData);
 
             const linkPaths = svg.append("g")
-        .selectAll("path")
-        .data(sankeyData.links)
-        .enter().append("path")
-        .attr("class", "link")
-        .attr("d", d3.sankeyLinkHorizontal())
-        .attr("stroke", d => color(d.source.displayName))
-        .attr("stroke-width", d => Math.max(1, d.width))
-        .on("mouseover", function(event, d) {
-            clearTimeout(linkTimeout);
-            linkTimeout = setTimeout(() => {
-                const connectedNodes = new Set([d.source, d.target]);
-                const connectedLinks = new Set([d]);
+                .selectAll("path")
+                .data(sankeyData.links)
+                .enter().append("path")
+                .attr("class", "link")
+                .attr("d", d3.sankeyLinkHorizontal())
+                .attr("stroke", d => color(d.source.displayName))
+                .attr("stroke-width", d => Math.max(1, d.width))
+                .on("mouseover", function(event, d) {
+                clearTimeout(linkTimeout);
+                linkTimeout = setTimeout(() => {
+                    const connectedNodes = new Set([d.source, d.target]);
+                    const connectedLinks = new Set([d]);
         
                 linkPaths.classed("highlight", l => connectedLinks.has(l))
                     .classed("dimmed", l => !connectedLinks.has(l));
@@ -306,12 +356,25 @@
             nodeTooltip.classed("show", false);
                 });
 
-            nodesGroup.append("text")
+                nodesGroup.append("text")
+    .attr("x", 6)
+    .attr("y", d => (d.y1 - d.y0) / 2)
+    .attr("dy", "0.35em")
+    .attr("text-anchor", "start")
+    .each(function(d) {
+        const text = d3.select(this);
+        const label = d.displayName === "non-armed stem"
+            ? ["non-armed", "stem"]
+            : [d.displayName];
+
+        label.forEach((line, i) => {
+            text.append("tspan")
                 .attr("x", 6)
-                .attr("y", d => (d.y1 - d.y0) / 2)
-                .attr("dy", "0.35em")
-                .attr("text-anchor", "start")
-                .text(d => d.displayName);
+                .attr("dy", i === 0 ? -2 : "1.2em")
+                .text(line);
+        });
+    });
+
 
             function getMappedValue(field, value) {
                 const mappings = {
