--- a/index.html
+++ b/index.html
@@ -131,6 +131,28 @@
             margin: 20px 0;
             font-weight: 700;
         }
+
+        #histograms-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px 0;
+}
+
+.histogram .bar {
+    fill: #2a7a3b;
+    transition: all 0.3s ease;
+}
+
+.histogram .axis path,
+.histogram .axis line {
+    stroke: #666;
+}
+
+.histogram .axis text {
+    fill: #333;
+    font-size: 10px;
+}
     </style>
 </head>
 
@@ -140,6 +162,11 @@
         <div id="sankey-container">
             <svg id="sankey" width="900" height="400"></svg>
         </div>
+    </div>
+
+    <div id="histograms-container">
+        <svg id="height-histogram" class="histogram" width="450" height="250"></svg>
+        <svg id="diameter-histogram" class="histogram" width="450" height="250"></svg>
     </div>
 
     <div id="node-tooltip"></div>
@@ -168,8 +195,103 @@
         let nodeTimeout, linkTimeout;
         const tooltipDelay = 200;
 
+        const histogramMargins = { top: 20, right: 20, bottom: 30, left: 40 };
+const histogramWidth = 450 - histogramMargins.left - histogramMargins.right;
+const histogramHeight = 250 - histogramMargins.top - histogramMargins.bottom;
+
+function prepareHistograms() {
+    // Height histogram setup
+    const heightSvg = d3.select("#height-histogram")
+        .attr("width", histogramWidth + histogramMargins.left + histogramMargins.right)
+        .attr("height", histogramHeight + histogramMargins.top + histogramMargins.bottom)
+        .append("g")
+        .attr("transform", `translate(${histogramMargins.left},${histogramMargins.top})`);
+
+    heightSvg.append("text")
+        .attr("class", "column-title")
+        .attr("x", histogramWidth / 2)
+        .attr("y", -5)
+        .text("Maximum Stem Height (m)");
+
+    // Diameter histogram setup
+    const diameterSvg = d3.select("#diameter-histogram")
+        .attr("width", histogramWidth + histogramMargins.left + histogramMargins.right)
+        .attr("height", histogramHeight + histogramMargins.top + histogramMargins.bottom)
+        .append("g")
+        .attr("transform", `translate(${histogramMargins.left},${histogramMargins.top})`);
+
+    diameterSvg.append("text")
+        .attr("class", "column-title")
+        .attr("x", histogramWidth / 2)
+        .attr("y", -5)
+        .text("Maximum Stem Diameter (cm)");
+}
+
+function updateHistograms(data) {
+    updateHistogram(data, 'max_stem_height_m', '#height-histogram');
+    updateHistogram(data, 'max_stem_dia_cm', '#diameter-histogram');
+}
+
+function getRawValue(field, displayValue) {
+    const mappings = {
+        'stem_armed': { 'armed stem': 'armed', 'non-armed stem': 'non-armed' },
+        'stem_solitary': { 'solitary stem': 'solitary', 'cluster stems': 'non-solitary' }
+    };
+    return mappings[field]?.[displayValue] || displayValue;
+}
+
+function updateHistogram(data, field, selector) {
+    const svg = d3.select(selector);
+    const g = svg.select("g");
+    const validData = data.filter(d => d[field] != null);
+    const values = validData.map(d => +d[field]);
+
+    if (values.length === 0) {
+        g.selectAll(".bar, .x-axis, .y-axis").remove();
+        return;
+    }
+
+    const xDomain = [d3.min(values), d3.max(values)];
+    const histogram = d3.histogram().domain(xDomain).thresholds(d3.thresholdScott(values));
+    const bins = histogram(values);
+
+    const xScale = d3.scaleLinear().domain(xDomain).range([0, histogramWidth]);
+    const yScale = d3.scaleLinear().domain([0, d3.max(bins, d => d.length)]).range([histogramHeight, 0]);
+
+    // Update bars
+    const bars = g.selectAll(".bar").data(bins);
+    bars.exit().remove();
+
+    bars.enter().append("rect")
+        .attr("class", "bar")
+        .merge(bars)
+        .transition().duration(300)
+        .attr("x", d => xScale(d.x0))
+        .attr("width", d => Math.max(0, xScale(d.x1) - xScale(d.x0) - 1))
+        .attr("y", d => yScale(d.length))
+        .attr("height", d => histogramHeight - yScale(d.length));
+
+    // Update axes
+    const xAxis = d3.axisBottom(xScale);
+    const yAxis = d3.axisLeft(yScale);
+
+    svg.select(".x-axis").remove();
+    svg.select(".y-axis").remove();
+
+    g.append("g")
+        .attr("class", "x-axis")
+        .attr("transform", `translate(0, ${histogramHeight})`)
+        .call(xAxis);
+
+    g.append("g")
+        .attr("class", "y-axis")
+        .call(yAxis);
+}
+
         d3.json("palmtrees_cleaned.json").then(data => {
             fullData = data;
+            prepareHistograms();
+            updateHistograms(fullData);
             drawSankey();
         });
 
@@ -252,6 +374,21 @@
                                 <div style="font-size: 0.9em;">${getLinkText(sourceValue, targetValue)}</div>
                             `)
                             .classed("show", true);
+
+                            const sourceField = d.source.id.split(': ')[0];
+        const targetField = d.target.id.split(': ')[0];
+        const sourceDisplayValue = d.source.displayName;
+        const targetDisplayValue = d.target.displayName;
+
+        // Convert display values to raw values
+        const rawSourceValue = getRawValue(sourceField, sourceDisplayValue);
+        const rawTargetValue = getRawValue(targetField, targetDisplayValue);
+
+        const subset = fullData.filter(tree => 
+            tree[sourceField] === rawSourceValue && 
+            tree[targetField] === rawTargetValue
+        );
+        updateHistograms(subset);
                     }, tooltipDelay);
                 })
                 .on("mousemove", function(event) {
@@ -267,6 +404,7 @@
                 .classed("highlight", false)
                 .classed("dimmed", false);
             linkTooltip.classed("show", false);
+            updateHistograms(fullData);
                 });
 
             const nodesGroup = svg.append("g")
@@ -339,6 +477,10 @@
                         <div style="font-size: 0.9em;">${getNodeText(field, value)}</div>
                     `)
                     .classed("show", true);
+
+const rawValue = getRawValue(field, value);
+const subset = fullData.filter(tree => tree[field] === rawValue);
+updateHistograms(subset);
             }, tooltipDelay);
         })
                 .on("mousemove", function(event) {
@@ -354,6 +496,7 @@
                 .classed("highlight", false)
                 .classed("dimmed", false);
             nodeTooltip.classed("show", false);
+            updateHistograms(fullData);
                 });
 
                 nodesGroup.append("text")
