--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             display: flex;
             justify-content: center;
             gap: 20px;
-            margin: 20px 0;
+            margin: 20px 0 30px 0;
         }
 
         .histogram .bar {
@@ -180,28 +180,34 @@
             fill: #2a7a3b;
             text-anchor: middle;
         }
+
+        a{
+            color: lightgray
+        }
     </style>
 </head>
 
 <body>
     <h1 id="main-title">Let's learn about 2000+ palm tree species!</h1>
     <div style="display: flex; flex-direction: row; width:900px;">
-        <p class="subtitle">Subfamily</p>
-        <p class="subtitle" style="padding-left: 130px;">Climbability</p>
-        <p class="subtitle" style="padding-left: 120px;">Growth Form</p>
-        <p class="subtitle" style="padding-left: 110px;">Armature</p>
+        <p class="subtitle" style="padding-left: 10px;">Subfamily</p>
+        <p class="subtitle" style="padding-left: 130px;">Growth Habit <a href="#info_habit">i</a></p>
+        <p class="subtitle" style="padding-left: 115px;">Growth Form</p>
+        <p class="subtitle" style="padding-left: 125px;">Armature</p>
         <p class="subtitle" style="padding-left: 140px;">Stem Type</p>
     </div>
     <div id="container">
         <div id="sankey-container">
-            <svg id="sankey" width="900" height="400"></svg>
+            <svg id="sankey" width="900" height="350"></svg>
         </div>
     </div>
 
     <div id="histograms-container">
-        <svg id="height-histogram" class="histogram" width="450" height="260"></svg>
-        <svg id="diameter-histogram" class="histogram" width="450" height="260"></svg>
+        <svg id="height-histogram" class="histogram" width="450" height="250"></svg>
+        <svg id="diameter-histogram" class="histogram" width="450" height="250"></svg>
     </div>
+
+    <p id="info_habit">Growth habit: Climbing palms grow by attaching to supports; non-climbing palms stand upright on their own.</p>
 
     <div id="node-tooltip"></div>
     <div id="link-tooltip"></div>
@@ -222,9 +228,9 @@
         let nodeTimeout, linkTimeout;
         const tooltipDelay = 200;
 
-        const histogramMargins = { top: 20, right: 20, bottom: 40, left: 45 };
+        const histogramMargins = { top: 25, right: 20, bottom: 40, left: 45 };
         const histogramWidth = 450 - histogramMargins.left - histogramMargins.right;
-        const histogramHeight = 260 - histogramMargins.top - histogramMargins.bottom;
+        const histogramHeight = 250 - histogramMargins.top - histogramMargins.bottom;
 
         function prepareHistograms() {
             // Height histogram setup
@@ -237,7 +243,7 @@
             heightSvg.append("text")
                 .attr("class", "column-title")
                 .attr("x", histogramWidth / 2)
-                .attr("y", -5)
+                .attr("y", -10)
                 .text("Max. Stem Height (m)");
 
             // Diameter histogram setup
@@ -250,7 +256,7 @@
             diameterSvg.append("text")
                 .attr("class", "column-title")
                 .attr("x", histogramWidth / 2)
-                .attr("y", -5)
+                .attr("y", -10)
                 .text("Max. Stem Diameter (cm)");
         }
 
