--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             display: flex;
             justify-content: center;
             gap: 20px;
-            margin: 20px 0 30px 0;
+            margin: 20px 0 20px 0;
         }
 
         .histogram .bar {
@@ -181,8 +181,14 @@
             text-anchor: middle;
         }
 
-        a{
-            color: lightgray
+        a {
+            color: grey;
+            text-decoration: none;
+        }
+
+        #info_habit, #info_form {
+            color: grey;
+            font-size: 11px;
         }
     </style>
 </head>
@@ -191,9 +197,9 @@
     <h1 id="main-title">Let's learn about 2000+ palm tree species!</h1>
     <div style="display: flex; flex-direction: row; width:900px;">
         <p class="subtitle" style="padding-left: 10px;">Subfamily</p>
-        <p class="subtitle" style="padding-left: 130px;">Growth Habit <a href="#info_habit">i</a></p>
-        <p class="subtitle" style="padding-left: 115px;">Growth Form</p>
-        <p class="subtitle" style="padding-left: 125px;">Armature</p>
+        <p class="subtitle" style="padding-left: 125px;">Growth Habit <a href="#info_habit">[1]</a></p>
+        <p class="subtitle" style="padding-left: 95px;">Growth Form <a href="#info_form">[2]</a></p>
+        <p class="subtitle" style="padding-left: 110px;">Armature</p>
         <p class="subtitle" style="padding-left: 140px;">Stem Type</p>
     </div>
     <div id="container">
@@ -207,7 +213,8 @@
         <svg id="diameter-histogram" class="histogram" width="450" height="250"></svg>
     </div>
 
-    <p id="info_habit">Growth habit: Climbing palms grow by attaching to supports; non-climbing palms stand upright on their own.</p>
+    <p id="info_habit">[1] Growth habit: Climbing palms grow by attaching to supports; non-climbing palms stand upright on their own.</p>
+    <p id="info_form" style="margin-top: -5px; margin-bottom: 40px;">[2] Growth form: Erect palms grow upright with a vertical stem, while non-erect palms lean or sprawl without a defined vertical structure.</p>
 
     <div id="node-tooltip"></div>
     <div id="link-tooltip"></div>
